BB-5939: Wrong appearance of the shopping list page on tablet(landscape view) - Fix the issue

--- a/src/Oro/Bundle/UIBundle/Resources/public/blank/scss/components/page-content.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/blank/scss/components/page-content.scss
@@ -12,7 +12,7 @@
     }
 }
 
-@include breakpoint('tablet-small') {
+@include breakpoint('tablet') {
     .page-content {
         &--has-sidebar {
             padding: $page-content-with-sidebar-tables-s-inner-offset;
